@@ -1,5 +1,7 @@
 2008-01-17  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c (dfsch_empty_list_type): empty-list type
+
 	* src/weak.c (dfsch_weak_reference_dereference): lock allocator
 	when checking for live reference 
 
